<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".xc.SwapActivity"
    android:background="@color/white">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewSwapPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_black"
                android:text="@string/swap_main_title"
                tools:text="Swap"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSwapPageSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/swap_main_subtitle"
                tools:text="Swapping crypto is now easy and secure"
                android:textColor="#000000"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/layoutSwapCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/dashed_border"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/swap_from_label"
                        tools:text="From"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/from_currency_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/from_amount_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:hint="@string/swap_amount_hint"
                        tools:hint="Amount"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageViewSwapArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/swap_arrow"
                    android:contentDescription="@string/swap_arrow_content_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/swap_to_label"
                        tools:text="To"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/to_currency_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/to_amount_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:hint="@string/swap_estimated_amount_hint"
                        tools:hint="Estimated Amount"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/exchange_rate_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    tools:text="1 wBKC = 10 E20C (Simulated)"
                    android:textColor="#888888"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/swap_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/custom_button_background"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/swap_button_action"
                    tools:text="Swap"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewOptimizationInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/swap_optimization_info_title"
                tools:text="Allow BrokerFi to programmatically optimize your swaps to assist with:"
                android:textColor="#000000"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/layoutOptimizationCheckboxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp">

                    <CheckBox
                        android:id="@+id/checkboxLowerExpenses"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:button="@drawable/check_box"
                        android:checked="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/swap_optimization_lower_expenses"
                        tools:text="Lower your transaction expenses"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp">

                    <CheckBox
                        android:id="@+id/checkboxDecreaseErrors"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:button="@drawable/check_box"
                        android:checked="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/swap_optimization_decrease_errors"
                        tools:text="Decrease the chances of transaction errors"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp">
                    <CheckBox
                        android:id="@+id/checkboxAvoidJammed"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:button="@drawable/check_box"
                        android:checked="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/swap_optimization_avoid_jammed"
                        tools:text="Avoid transactions from getting jammed"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp">
                    <CheckBox
                        android:id="@+id/checkboxGuardFrontRunning"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:button="@drawable/check_box"
                        android:checked="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/swap_optimization_guard_front_running"
                        tools:text="Guard against front-running *"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarSwapLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>